# PCS3216

./: .gitignore  Cargo.toml  pyproject.toml  readme.org
P2/: controle.py  interpretador.py  main.ctrl  test.txt  utils.py
P2/disk/assets/: hello_world.asm  interpreter_input.txt  interpreter_test.script  loader.asm  main.ctrl  simple.asm
example/disk/inputs/: min_max.script
example/disk/outputs/: interpreter_output
src/: assembler.rs  cpu.rs  lib.rs  main.rs  memory.rs
src/assets/: fonteQ11.txt  hello_world.asm
