[tool.poetry]
name = "sisprog"
version = "0.1.0"
description = ""
authors = ["Adarah <lucasyharada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.0.4"
ptvsd = "^4.3.2"
pytest = "^5.4.3"
mypy = "^0.782"
flake8 = "^3.8.3"
pyinstaller = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
